表記の変更と追記

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <p>以下のボタンから行いたい操作を選んでください。</p>
             <div class="button">
                 <button onclick="location.href='./create.html'">問題データをナビで作成</button>
-                <button onclick="location.href='./view.html'">問題データを閲覧</button>
+                <button onclick="location.href='./view.html'">問題データをシャッフル閲覧</button>
                 <br><br>
                 <button onclick="location.href='./csvmanual.html'" class="finish">問題データを手動で作成</button>
             </div>
