--- a/view.html
+++ b/view.html
@@ -62,7 +62,6 @@
         <div class="menu">
             <div id="step1">
                 <h1>1.ファイルを読み込む</h1>
-                <h3>ファイルを再度読み込むと、再シャッフルされます。</h3>
                 <p>ファイルを指定してください。</p>
                 <form>
                     <input id="file" type="file">
@@ -70,7 +69,7 @@
             </div>
             <div id="step2" style="display: none;">
                 <h1>2.問題一覧</h1>
-                <h3>問題データをシャッフルしました。</h3>
+                <h3>問題データをシャッフルしました。再度読み込むと、再シャッフルされます。</h3>
                 <div id="quests"></div>
                 <button onclick="beforeq()">前の問題</button>
                 <button onclick="nextq()">次の問題</button>
