デザインの変更と説明ページ追加

--- a/about.html
+++ b/about.html
@@ -70,19 +70,13 @@
     <noscript>JavaScriptが無効になっています。このアプリケーションは、JavaScriptが有効でないと正常に（あるいは全く）動作しません。</noscript>
     <div class="content">
         <div class="menu">
-            <h1>問題データCSVを手動で作成する</h1>
-            <h2>1.ソフトを用意する</h2>
-            <p>ExcelやスプレッドシートなどのCSV形式のファイルの編集に対応した表計算ソフトを用意します。</p>
-            <h2>2.問題を編集する</h2>
-            <p>テンプレートは<a href="./template.csv" download>こちら</a></p>
-            <p>まず、上記のリンクより、テンプレートをダウンロードします。<br>
-            つぎに、ダウンロードしたファイルを、表計算ソフトあるいはメモ帳などで開きます。</p>
-            <h3>操作手順</h3>
-            <p>ファイルを開くと、以下のような画面になります。</p>
-            <p><img src="./1.jpg" width="100%"></p>
-            <p>A列に問題の通し番号（上から1,2,3,4,5…）、B列に問題文、C列に語群など（省略可）を入れていきます。（最初からあるサンプルの問題は削除してください。）</p>
-            <p><img src="./2.jpg" width="100%"></p>
-            <p>終わったら、CSV形式のファイルとして保存します。<br>作成したファイルは、<a href="./view.html">問題データを閲覧</a>からそのまま使用できます。</p>
+            <h1>このアプリについて</h1>
+            <p>このアプリでは、ワークなどの問題を入力して指定することで、各問題をシャッフルして出題することができます。
+                <br>※問題が表示されるだけで、正解チェックや、書き込み等の機能はありません。ノートに解くなどして使用してください。
+                <br>このアプリの動作はすべてローカル上で完結しています。ファイルがサーバーにアップロードされたり、保存されることはありません。
+                <br>心配であれば、Github（<a href="http://github.com/kw-ms/questionplayer">こちら</a>）でソースコードを公開していますのでご確認ください。
+                <br>このアプリはGithub Pages上でホストされています。
+            </p>
             <button onclick="location.href='./index.html'" class="finish">戻る</button>
         </div>
         <div class="info">
