--- a/view.html
+++ b/view.html
@@ -11,6 +11,9 @@
         html,body{
             height: 100%;
         }
+        body{
+            background-color: rgb(224, 224, 224);
+        }
         header{
             background-color: black;
             color: white;
@@ -22,16 +25,20 @@
             justify-content: space-around;
         }
         .menu{
+            border-radius: 0.5em;
+            border: 1px solid black;
+            background-color: white;
             margin: 1%;
             padding: 1%;
-            border: 3px solid black;
             width: 60%;
             margin: 1%;
         }
         .info{
+            border-radius: 0.5em;
+            border: 1px solid black;
+            background-color: white;
             padding: 1%;
             margin: 1%;
-            border: 3px solid black;
             flex: 1;
         }
         button{
