--- a/create.html
+++ b/create.html
@@ -101,6 +101,9 @@
         .long{
             width: 100%;
         }
+        .red{
+            color:red;
+        }
     </style>
 </head>
 <body>
@@ -114,6 +117,7 @@
             <h1>1.問題データを作成する</h1>
             <p>問題データの作成を開始します。</p>
             <p>下のテーブルに、問題の情報を追加してください。完了したら、次へをクリックしてください。</p>
+            <p class="red">問題を1問しか追加しなかった場合、問題表示画面でバグが起こるようです。現在修正を行っています。問題を1問しか追加しないという状況はないと思われますが、それまでは、2問以上問題を追加するようにして対応してください。</p>
             <table border="1" class="q" id="table">
                 <tr>
                     <th class="n">通し番号</th>
