バグ報告追加

--- a/csvmanual.html
+++ b/csvmanual.html
@@ -74,6 +74,9 @@
         .finish:active{
             background-color: rgb(80, 80, 80);
         }
+        .red{
+            color:red
+        }
     </style>
 </head>
 <body>
@@ -94,6 +97,7 @@
             <p>ファイルを開くと、以下のような画面になります。</p>
             <p><img src="./1.jpg" width="100%"></p>
             <p>A列に問題の通し番号（上から1,2,3,4,5…）、B列に問題文、C列に語群など（省略可）を入れていきます。（最初からあるサンプルの問題は削除してください。）</p>
+            <p class="red">問題を1問しか追加しなかった場合、問題表示画面でバグが起こるようです。現在修正を行っています。問題を1問しか追加しないという状況はないと思われますが、それまでは、2問以上問題を追加するようにして対応してください。</p>
             <p><img src="./2.jpg" width="100%"></p>
             <p>終わったら、CSV形式のファイルとして保存します。<br>作成したファイルは、<a href="./view.html">問題データを閲覧</a>からそのまま使用できます。</p>
             <button onclick="location.href='./index.html'" class="finish">戻る</button>
