お知らせの更新

--- a/about.html
+++ b/about.html
@@ -93,7 +93,11 @@
             <button onclick="location.href='./index.html'" class="finish">戻る</button>
         </div>
         <div class="info">
-            <h1>お知らせ（2024.02.17 NEW）</h1>
+            <h1>お知らせ（2024.02.21 NEW）</h1>
+            <details>
+                <summary>新バージョンの開発について</summary>
+                <p>現行バージョンのシャッフル問題プレーヤーは、バグ・不具合が多すぎるため、現在新バージョンの開発を行っています。</p>
+            </details>
             <details>
                 <summary>レスポンシブデザインに対応しました。</summary>
                 <p>縦画面、横画面によって自動で配置が変わるようになりました。</p>
