--- a/csvmanual.html
+++ b/csvmanual.html
@@ -74,9 +74,6 @@
         .finish:active{
             background-color: rgb(80, 80, 80);
         }
-        .red{
-            color:red
-        }
     </style>
 </head>
 <body>
@@ -97,14 +94,16 @@
             <p>ファイルを開くと、以下のような画面になります。</p>
             <p><img src="./1.jpg" width="100%"></p>
             <p>A列に問題の通し番号（上から1,2,3,4,5…）、B列に問題文、C列に語群など（省略可）を入れていきます。（最初からあるサンプルの問題は削除してください。）</p>
-            <p class="red">問題文、語群などにカンマ（,）は使用しないでください。</p>
-            <p class="red">問題を1問しか追加しなかった場合、問題表示画面でバグが起こるようです。現在修正を行っています。問題を1問しか追加しないという状況はないと思われますが、それまでは、2問以上問題を追加するようにして対応してください。</p>
             <p><img src="./2.jpg" width="100%"></p>
             <p>終わったら、CSV形式のファイルとして保存します。<br>作成したファイルは、<a href="./view.html">問題データを閲覧</a>からそのまま使用できます。</p>
             <button onclick="location.href='./index.html'" class="finish">戻る</button>
         </div>
         <div class="info">
-            <h1>お知らせ（2024.02.17 NEW）</h1>
+            <h1>お知らせ（2024.02.21 NEW）</h1>
+            <details>
+                <summary>新バージョンの開発について</summary>
+                <p>現行バージョンのシャッフル問題プレーヤーは、バグ・不具合が多すぎるため、現在新バージョンの開発を行っています。</p>
+            </details>
             <details>
                 <summary>レスポンシブデザインに対応しました。</summary>
                 <p>縦画面、横画面によって自動で配置が変わるようになりました。</p>
